<resources>
    <string name="app_name">InsCon</string>
    <string name="college_photo">college photo</string>
    <string name="translucent">Making it translucent</string>
    <string name="white_screen">white_screen</string>
    <string name="logo">logo_iiitnr</string>
    <string name="button_content">Continue with college email</string>
    <string name="creators">Creators</string>
    <string name="my_feeds">My Feeds</string>
    <string name="attach_value">Attach</string>
    <string name="recycler_view_header">Let\'s find a companion</string>
    <string name="search">search</string>
    <string name="user_name">%s: </string>
    <string name="log_in">Log in</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="register">Register</string>
    <string name="emoji_button">Emoji Button</string>
    <string name="camera_button">camera button</string>
    <string name="mic_button">Mic button</string>
    <string name="chat_bot_image">Chat BOT Image</string>
    <string name="back_button">Back button</string>
    <string name="options_button">Options Button</string>
    <string name="chat_image">Chat Image</string>
    <string name="user_to_chat">User to chat</string>
    <string name="user_account_profile_picture">User account profile picture</string>
    <string name="join_the_n_community">Join the\nCommunity</string>
    <string name="search_the_community">Search the community</string>
    <string name="stress">Stress</string>
    <string name="anxiety">Anxiety</string>
    <string name="paranoia">Paranoia</string>
    <string name="psychosis">Psychosis</string>
    <string name="depression">Depression</string>
    <string name="more">More</string>
    <string name="posts">Posts</string>
    <string name="members">Members</string>
    <string name="about">About</string>
    <string name="follow">Follow</string>
    <string name="follow_on">Follow on</string>
    <string name="my_feed">My Feed</string>
    <string name="share_your_thoughts">Share your thoughts</string>
    <string name="registered_already">Registered already?</string>
    <string name="name">Name</string>
    <string name="sample_message">This is a sample message that will appear</string>
    <string name="send_button">send button</string>
    <string name="start_chat_value">| Write Message</string>
    <string name="placement_cell"><![CDATA[TRAINING & PLACEMENT CELL]]></string>
    <string name="iiit_naya_raipur">WELCOME TO IIIT NAYA RAIPUR</string>
    <string name="amit_kumar_agrawal">AMIT KUMAR AGRAWAL</string>

</resources>
