<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="420dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/iiitnr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:contentDescription="@string/college_photo" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/rectangle1"
            android:scaleType="fitXY"
            android:alpha="0.45"
            android:contentDescription="@string/translucent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rectangle2"
            android:layout_gravity="center"
            android:alpha=".73"
            android:layout_marginHorizontal="70dp"
            android:layout_marginVertical="70dp"
            android:contentDescription="@string/white_screen" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logowelcome"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/logo" />
        <Button
            android:layout_width="wrap_content"
            android:background="@drawable/login_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:text="@string/button_content"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>